--- a/mywork/conf/db.conf
+++ b/mywork/conf/db.conf
@@ -1,4 +1,5 @@
 mysqluser = "root"
-mysqlpass = "1234@abcd"
-mysqlurls = "127.0.0.1"
-mysqldb   = "beego"
+mysqlpass = ""
+mysqlurls = "127.0.0.1:3306"
+mysqldb   = "lite_blog"
+dbtype = "mysql"
