update：优化前台展示数据

--- a/mywork/conf/app.conf
+++ b/mywork/conf/app.conf
@@ -2,10 +2,10 @@ appname = mywork
 httpport = 8080
 runmode = dev
 session = true
+autodb = true
 
 enablexsrf = true
 xsrfkey = 61oETzKXQAGaYdkL5gEmGeJJFuYh7EQnp2XdTP1o
 xsrfexpire = 3600
-
 
 include "db.conf"
