--- a/mywork/conf/db.conf
+++ b/mywork/conf/db.conf
@@ -1,5 +1,5 @@
 mysqluser = "root"
-mysqlpass = ""
+mysqlpass = "1234@abcd"
 mysqlurls = "127.0.0.1:3306"
 mysqldb   = "lite_blog"
 dbtype = "mysql"
