add:增加日志记录

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /lastupdate.tmp
-,./logs/
+./logs/
 /.idea/
 /routers/commentsRouter______________________Users_mdd_go_src_lite_blog_controllers.go
 /.idea/
+/docs/session/
